Fixing local environment issues.
Signed-off-by: Michael Sneb <michael.sneb@gmail.com>